--- a/index.html
+++ b/index.html
@@ -11,11 +11,42 @@
 </head>
 <body>
 
-    <article class="story">
-        <img src="./assets/img/article-image.jpg" alt="" class="story-cover">
-        <h2 class="story-title">The Summer Reader Poll Returns: Tell Us Your Favorite New Sci-Fi And Fantasy Books</h2>
-        <p>Our famous Summer Reader Poll is back! It's been 10 years since our original sci-fi and fantasy poll, and the field has changed so much since then — so tell us about your favorite new reads!</p>
-    </article>
+    <main class="main">
+        <div class="stories">
+            <article class="story">
+                <img src="./assets/img/article-image.jpg" alt="" class="story-cover">
+                <h2 class="story-title">The Summer Reader Poll Returns: Tell Us Your Favorite New Sci-Fi And Fantasy Books</h2>
+                <p>Our famous Summer Reader Poll is back! It's been 10 years since our original sci-fi and fantasy poll, and the field has changed so much since then — so tell us about your favorite new reads!</p>
+            </article>
+
+            <article class="story">
+                <img src="./assets/img/article-image.jpg" alt="" class="story-cover">
+                <h2 class="story-title">The Summer Reader Poll Returns: Tell Us Your Favorite New Sci-Fi And Fantasy Books</h2>
+                <p>Our famous Summer Reader Poll is back! It's been 10 years since our original sci-fi and fantasy poll, and the field has changed so much since then — so tell us about your favorite new reads!</p>
+            </article>
+
+            <article class="story">
+                <img src="./assets/img/article-image.jpg" alt="" class="story-cover">
+                <h2 class="story-title">The Summer Reader Poll Returns: Tell Us Your Favorite New Sci-Fi And Fantasy Books</h2>
+                <p>Our famous Summer Reader Poll is back! It's been 10 years since our original sci-fi and fantasy poll, and the field has changed so much since then — so tell us about your favorite new reads!</p>
+            </article>
+
+            <article class="story">
+                <img src="./assets/img/article-image.jpg" alt="" class="story-cover">
+                <h2 class="story-title">The Summer Reader Poll Returns: Tell Us Your Favorite New Sci-Fi And Fantasy Books</h2>
+                <p>Our famous Summer Reader Poll is back! It's been 10 years since our original sci-fi and fantasy poll, and the field has changed so much since then — so tell us about your favorite new reads!</p>
+            </article>
+
+            <article class="story">
+                <img src="./assets/img/article-image.jpg" alt="" class="story-cover">
+                <h2 class="story-title">The Summer Reader Poll Returns: Tell Us Your Favorite New Sci-Fi And Fantasy Books</h2>
+                <p>Our famous Summer Reader Poll is back! It's been 10 years since our original sci-fi and fantasy poll, and the field has changed so much since then — so tell us about your favorite new reads!</p>
+            </article>
+
+        </div>
+    </main>
+
+
 
 
 </body>
